<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/inputField"
        style="@style/text_view_style"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/resultField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultField"
        style="@style/text_view_style"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputField" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultField">

        <TableRow style="@style/button_row_style">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                style="@style/button_style"
                android:text="@string/button_clear" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_bracket"
                style="@style/button_style"
                android:text="@string/button_bracket" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                style="@style/button_style"
                android:text="@string/button_percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_div"
                style="@style/button_style"
                android:text="@string/button_div" />
        </TableRow>

        <TableRow style="@style/button_row_style">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/button_style"
                android:text="@string/button_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/button_style"
                android:text="@string/button_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/button_style"
                android:text="@string/button_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_mul"
                style="@style/button_style"
                android:text="@string/button_mul" />
        </TableRow>

        <TableRow style="@style/button_row_style">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/button_style"
                android:text="@string/button_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/button_style"
                android:text="@string/button_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/button_style"
                android:text="@string/button_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/button_style"
                android:text="@string/button_minus" />
        </TableRow>

        <TableRow style="@style/button_row_style">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/button_style"
                android:text="@string/button_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/button_style"
                android:text="@string/button_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/button_style"
                android:text="@string/button_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/button_style"
                android:text="@string/button_plus" />
        </TableRow>

        <TableRow style="@style/button_row_style">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_negative"
                style="@style/button_style"
                android:text="@string/button_negative" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/button_style"
                android:text="@string/button_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_point"
                style="@style/button_style"
                android:text="@string/button_point" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/button_equal_style"
                android:text="@string/button_equal" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>